<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quest2">


    <Button
        android:id="@+id/volver2"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="289dp"
        android:layout_marginRight="289dp"
        android:layout_marginBottom="0dp"
        android:text="@string/volver1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:id="@+id/label_question2" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_question2"
        android:textSize="18sp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/label_question2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <View
        android:id="@+id/ruler2"
        android:layout_below="@id/text_question2"
        android:layout_marginTop="10dp"
        android:background="#813e3e3e"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ruler2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:id="@+id/answer_group2">

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer2_1"
            android:layout_weight="1" />

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer2_2"
            android:layout_weight="1" />

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer2_3"
            android:layout_weight="1" />

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer2_4"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:text="@string/check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn_check5" />
</RelativeLayout>