...
        android:layout_below="@+id/ruler"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:id="@+id/answer_group">

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer1"
...
            android:layout_weight="1" />

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer4"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:text="@string/check"
        android:layout_width="wrap_content"
...
